# algo-visualizer

./: CMakeLists.txt  TODO.md  main.cpp.old
.github/workflows/: pages.yml
include/: UI.hpp  app.hpp  bfs.hpp  menu.hpp  scene.hpp  state.hpp  trees.hpp  utils.hpp  web.h
resources/: algo-viz-scene-layout.rgl  style_amber.rgs  style_amber2.rgs
src/: app.cpp  main.cpp  menu.cpp  scene.cpp  shell.html  utils.cpp  web.c
web/: CMakeLists.txt
web/src/: web.cpp  web.hpp
